2000-03-30    <Kalle Marjola <rpr@wapit.com>>

	* gwlib/octstr.c: removed wrong assertion from octstr_truncate

Thu Mar 30 06:51:03 2000  Lars Wirzenius  <liw@wapit.com>

	* gwlib/octstr.[ch]: Changed octstr_create_from_data and
	octstr_get_many_chars to get void* instead of char*.
	
	* gwlib/socket.[ch]: Wrote some generic UDP socket handling things.

Thu Mar 30 05:28:02 2000  Lars Wirzenius  <liw@wapit.com>

	* acconfig.h, config.h.bot, config.h.top, stamp-h.in: Removed as
	unnecessary.
	
	* config.h.in, configure.in, gwlib/conffile.h, gwlib/log.c:
	Cleaned up by removing unnecessary checks. For example, since
	we *require* an ANSI C compiler anyway, there's no point in
	checking for const.

Thu Mar 30 04:47:25 2000  Lars Wirzenius  <liw@wapit.com>

	* gwlib/gwmem.c: Added some code to keep track of memory allocations
	and to check that frees free freeable memory.
	
	* lotsafiles: Added a gw_init_mem call to the beginning of each
	(relevant) main function.

Thu Mar 30 03:10:21 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wsp.c: Made use of Counters.

Thu Mar 30 03:05:53 2000  Lars Wirzenius  <liw@wapit.com>

	* gwlib/counter.[ch]: Wrote.
	
	* test/test_counter.c: Wrote.

Thu Mar 30 02:25:51 2000  Lars Wirzenius  <liw@wapit.com>

	* lotsafiles: Made minor tweaks to make things compile on my
	machine with CFLAGS='-Wall -O2 -g -Wbad-function-cast -Wcast-align
	-Wsign-compare -Wstrict-prototypes -Wmissing-prototypes
	-Wmissing-declarations' (which is getting pretty aggressive).

Thu Mar 30 01:27:40 2000  Lars Wirzenius  <liw@wapit.com>

	* Changed msg_dump and octstr_dump to take a "level" argument.
	This allows them to indent dumps within dumps correctly. Related
	changes at callers.

Thu Mar 30 01:04:34 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wsp.c, gw/wsp.h, gw/wsp_machine-decl.h: Changed
	METHOD_MACHINE and SESSION_MACHINE macros so that their users
	provide all punctuation. This will more easily allow certain
	nifty stuff in the future.
